--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,37 @@
-# Compiled class file
-*.class
+import java.time.LocalDate;
+import java.time.Period;
+import java.util.Scanner;
 
-# Log file
-*.log
+public class contagemANo {
 
-# BlueJ files
-*.ctxt
+    public static void main(String[] args) {
+        Scanner scanner = new Scanner(System.in);
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+        System.out.println("Digite uma data para saber quanto falta para ela chegar(dia/mês/ano) com a barra de separação:");
+        String dataRequerida = scanner.nextLine();
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+        String[] lerData = dataRequerida.split("/");
+        if (lerData.length != 3) {
+            System.out.println("Ops, esse formato de data não tem como ser validado, use o formato dd/mm/aaaa!");
+            scanner.close();
+            return; 
+        }
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+        int dia = Integer.parseInt(lerData[0]);
+        int mes = Integer.parseInt(lerData[1]);
+        int ano = Integer.parseInt(lerData[2]);
+
+        contaData(dia, mes, ano);
+
+        scanner.close();
+    }
+
+    public static void contaData(int dia, int mes, int ano) {
+        LocalDate dataHoje = LocalDate.now();
+        LocalDate dataRequerida = LocalDate.of(ano, mes, dia);
+        Period periodo = Period.between(dataHoje, dataRequerida);
+
+        System.out.printf("Faltam %d anos, %d meses e %d dias para chegar na data requerida %02d/%02d/%04d.%n",
+                periodo.getYears(), periodo.getMonths(), periodo.getDays(), dia, mes, ano);
+    }
+}
